--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="kisskh, free movies, HD movies, watch movies online, free online movies, stream movies, free TV shows, online streaming, watch movies free, HD movie streaming">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="msvalidate.01" content="55B5CB287AF0687E113D666C4EC9C1FD" />
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
