--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="main">
                 <span>Please press Ctrl + D to bookmark Kisskh and keep updated about our new domains.</span>
                 <ul class="m-list">
-                    <li><a onclick="window.open('https://kisskh.cam/home/', '_blank')"><span>Kisskh </span><span>live</span></a></li>
-                    <li><a onclick="window.open('https://kisskh.cam/home/', '_blank')"><span>Kisskh TV</span><span>live</span></a></li>
-                    <li><a onclick="window.open('https://kisskh.cam/home/', '_blank')"><span>Kisskh Official</span><span>live</span></a></li>
+                    <li><a onclick="window.open('https://kisskh.cam/', '_blank')"><span>Kisskh </span><span>live</span></a></li>
+                    <li><a onclick="window.open('https://kisskh.cam/', '_blank')"><span>Kisskh TV</span><span>live</span></a></li>
+                    <li><a onclick="window.open('https://kisskh.cam/', '_blank')"><span>Kisskh Official</span><span>live</span></a></li>
                 </ul>
 
                 <div class="notice">
